--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi amor</title>
+    <title>Ariana</title>
     <style>
         body, html {
             margin: 0;
@@ -68,8 +68,8 @@
 </head>
 <body>
     <div>
-        <h1>MI AMOR(●'◡'●)💕</h1>
-        <h2>Tengo un regalo para ti✍(◔◡◔)</h2>
+        <h1>Holi Pollis💕</h1>
+        <h2>Un detalle peque, pero con cariño jejeps✍</h2>
         <button onclick="window.location.href='rosas.html'">Ver regalo☞💛</button>
     </div>
 </body>
