--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 </head>
 <body>
     <div>
-        <h1>Holi Pollis💕</h1>
-        <h2>Un detalle peque, pero con cariño jejeps✍</h2>
-        <button onclick="window.location.href='rosas.html'">Ver regalo☞💛</button>
+        <h1> Holiii 🐤</h1>
+        <h2>Un detalle peque, pero con cariño jejeps ❤️</h2>
+        <button onclick="window.location.href='rosas.html'"> Ver regalo ☞ 🌻 </button>
     </div>
 </body>
 </html>
